# levi-actix-seaorm

./: Cargo.toml  README.md
migration/src/: lib.rs  m20240522_090839_create_user_table.rs
src/: db.rs  handlers.rs  main.rs
src/entity/: user.rs
src/services/: mod.rs  users_service.rs
